skan_tests/error/failAssign.sk
int main()
{
  int i;
  bool b;
  int e;

  i = 20;
  b = true;
  e = "false"; /* Fail: assigning a string to an int */